several fix around yaml

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -69,6 +69,10 @@ checks:
         - 1-4-9
       level: *lv1
       name: 画像、動画、音声、ASCIIアートが存在しない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         関連する達成基準が「適用なし適合」になります。
 
@@ -81,14 +85,8 @@ checks:
       level: *lv1
       url_as:
         -
-          name: (H37-1) img 要素の alt 属性を用いる
-          url: http://waic.jp/docs/as/info/201406/H37-1.html
-        -
-          name: (H67) 支援技術が無視すべき画像の img 要素で、alt属性値を空にして、title 属性を付与しない
-          url: http://waic.jp/docs/as/info/201406/H67.html
-        -
-          name: (H36) 送信 / 実行ボタンとして用いる画像の alt 属性を使用する
-          url: http://waic.jp/docs/as/info/201406/H36.html
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       name: 画像（img、area、input要素の画像ボタン等）には適切なalt属性値があてがわれている
       tech: |
         画像化された文字であれば、原則、画像と一致するaltを付与してある。あわせて、できれば、本当にその文字を画像化すべきか、よく吟味してください。
@@ -106,6 +104,10 @@ checks:
           - 1-1-1d
       level: *lv1
       name: 操作対象となるような画像（img、area、input要素の画像ボタン等）は存在しない。あるいはアクセシブルな技術で構築しているので問題がない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         input要素のsrcで画像を指定しているが適切なaltがある。
         area要素があるが、適切なaltがある。
@@ -119,6 +121,10 @@ checks:
           - 1-1-1d
       level: *lv1
       name: 画像（img、area、input要素の画像ボタン等）が操作する対象であり、一部、その機能を扱えない利用者が存在するが、その機能を説明している
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         Google Mapは、視覚障害者が扱うことは難しいが、「Google Map。ズームや移動ができる地図」と説明をしておく。
         地図の画像があり、視覚障害者が扱うことは難しいが、「地図」というaltがある。ただし付近にテキストによる経路説明等があれば、このaltは空にしても致命的なバリアではないでしょう。付近に経路説明等がなく、しかも地図の画像であることを明示していなければ、ひとに尋ねることもできないので、確実にバリアであるので修正しましょう。
@@ -146,6 +152,10 @@ checks:
         - 1-2-9
       level: *lv1
       name: 時間の経過に伴って変化する画像（カルーセル、アニメーションGIF等）、動画、音声は存在しない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         関連する達成基準が「適用なし適合」になります。
 
@@ -158,9 +168,16 @@ checks:
           - 1-1-1f
       level: *lv1
       name: 画像、動画、音声が時間の経過に伴って変化する要素が存在し、一部、その機能を扱えない利用者が存在するが、その機能を説明している
+      relations:
+        1-2-1:
+          - 1-2-1d
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
-        なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。
-        演説を音声で提供している場合、それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。こういった音声の場合は、書き起こしテキストを用意すること。
+        なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。しかし、1-2-1dを満たすことを考えると、できるだけ説明をするように心がけた方が良いと考えられます。
+        演説を音声で提供している場合、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の場合は、書き起こしテキストを用意すること。
       memo: |
         書籍の朗読の場合で、書き起こしテキストを用意すると、著作権を侵害しうるため、公開できないというような場合は？ 著作権法の中には、障害者についての例外（37条など）を定めているが、ウェブコンテンツの場合は、かならずしも受益者が障害者のみでないので、要注意と考えられます。とりあえず「朗読の音声。著作権保護の観点から書き起こしテキストは用意できない。」と説明することで適合、とすることで良いと考えられます。書籍名がわかれば、原典にあたることもできますので。
 
@@ -173,6 +190,13 @@ checks:
           - 1-1-1h
       level: *lv1
       name: <abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart (コンピュータと人間を区別する完全に自動化された公開チューリングテスト)">CAPTCHA</abbr>が存在しない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
+      relations:
+        1-1-1:
+          - 1-1-1h
 
     1-1-1h:
       criterion: *c1-1-1
@@ -183,6 +207,13 @@ checks:
           - 1-1-1h
       level: *lv1
       name: <abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart (コンピュータと人間を区別する完全に自動化された公開チューリングテスト)">CAPTCHA</abbr>が存在するが、CAPTCHAであることを説明し、かつさまざまな知覚に対応したCAPTCHAを用意している
+      relations:
+        1-1-1:
+          - 1-1-1g
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         画像CAPTCHAだけでなく、音声CAPTCHAなど、すくなくとも3つ以上の手段を設置している。
         メールなどで、担当者に問い合わせることでCAPTCHAをスキップできる。
@@ -196,6 +227,13 @@ checks:
           - 1-1-1j
       level: *lv1
       name: 試験、演習目的の画像、動画、音声は存在しない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
+      relations:
+        1-1-1:
+          - 1-1-1j
 
     1-1-1j:
       criterion: *c1-1-1
@@ -206,6 +244,13 @@ checks:
           - 1-1-1j
       level: *lv1
       name: 画像、動画、音声が存在するが、それは試験目的の画像であり、その目的を説明している
+      relations:
+        1-1-1:
+          - 1-1-1i
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         ヒアリング試験など、聴覚に依存した試験である。
         花の画像が表示され、「どの部分がガクか？」と尋ねるような画像で、試験目的の画像であることを明示している。
@@ -220,6 +265,13 @@ checks:
           - 1-1-1l
       level: *lv1
       name: 特定の感覚を呼び起こす目的の画像、動画、音声は存在しない
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
+      relations:
+        1-1-1:
+          - 1-1-1l
 
     1-1-1l:
       criterion: *c1-1-1
@@ -229,7 +281,14 @@ checks:
           - 1-1-1k
           - 1-1-1l
       level: *lv1
+      url_as:
+        -
+          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       name: 画像、動画、音声が存在するが、特定の感覚を呼び起こす目的のコンポーネントであり、その目的を説明している
+      relations:
+        1-1-1:
+          - 1-1-1k
       tech: |
         「この音声は、ひとが恐怖を感じる音声の例です」「見ていると平衡感覚を失う画像です」というような場合、それを説明している。
         「特定の感覚」を書き起こしテキストで再現することは、ほとんどの場合不可能なので、これらはアクセシビリティチェックの対象から外れます。
@@ -282,7 +341,7 @@ checks:
       level: *lv1
       name: 音声や映像が存在するが、存在するテキスト以上の情報を伝えていない
       tech: |
-        1.1.1で求められるように、その音声／映像が、存在するテキストを代替していることを明示すること。
+        その音声／映像が、存在するテキストを代替していることを明示すること。
 
     1-2-1c:
       criterion: *c1-2-1
@@ -311,7 +370,10 @@ checks:
           - 1-2-1b
           - 1-2-1d
       level: *lv1
-      name: 音声のない映像（GIFアニメーションなど）が存在するが、同等の情報をテキストで提供している
+      name: 音声のない映像（GIFアニメーションなど含む）が存在するが、同等の情報をテキストで提供している
+      relations:
+        1-1-1:
+          - 1-1-1f
       tech: |
         音声のない映像なので、テキスト起こしをする際、画面で起こっていることを、なるべく詳述する必要がある。
         可能であれば、画面で何が起こっているかの音声解説による説明があると、なおよいでしょう。
@@ -375,6 +437,10 @@ checks:
           - 1-2-1c
       level: *lv1
       name: 同期したメディアが存在するが、音声解説または書き起こしテキストが存在する
+      url_as:
+        -
+          name: 7.1.2.3 収録済みの映像コンテンツの代替コンテンツ又は音声ガイドに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.2.3.html
       tech: |
         講演の収録映像などは、書き起こしテキストを用意すること。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、視覚障害者が、映像を理解するのに必要な情報は詳述する必要がある。単純な話者の発話の書き起こしテキストを用意しただけでは、適合とならない。
         書き起こしテキストを用意しない場合は、画面で何が起こっているかの音声解説（副音声）による説明をいれること。この音声解説も、視覚障害者が動画を理解するために、誰が話しているのかなど、詳述すること。
@@ -506,6 +572,10 @@ checks:
         2-4-10:
           - 2-4-10a
       name: 見出しタグ、強調タグなどを用いて、セマンティックなマークアップをしている
+      url_as:
+        -
+          name: 7.1.3.1 情報及び関係性に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.3.1.html
       tech: |
         情報の意味を要素の色、大きさ、位置のみで提供していないこと。文章はh*やstrongなどを用いて構造化し、CSSなしでもきちんと情報が伝わるようにすること。
         見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
@@ -528,6 +598,10 @@ checks:
           - 1-3-1b
           - 1-3-1c
       name: tableの各要素はthead、thなどを用いて適切にマークアップしている
+      url_as:
+        -
+          name: 7.1.3.1 情報及び関係性に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.3.1.html
       tech: |
         表組みの場合は線形情報にして意味が通るようにすることが望ましい。またthead、thなどを正しく使えているとなお良い。表組みを線形情報にするのは、技術者でなければ難しいかもしれません。原則は「左上から右下に向かって読んでいく」と考えてください。また、じっさいのスクリーンリーダで確認するのも有効です。
 
@@ -548,6 +622,10 @@ checks:
           - 1-3-1d
           - 1-3-1e
       name: formの各要素はlabelを用いて適切にマークアップしている
+      url_as:
+        -
+          name: 7.1.3.1 情報及び関係性に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.1.3.1.html
       tech: |
         form類は、checkboxやradioなどは、labelでマークアップして、関連付けをおこなうこと。こうすることで、スクリーンリーダでは、それぞれの項目がわかりやすくなり、ポインティング・デバイスを使いづらい利用者にとっては、クリックしやすくなります。
         formに必須項目がある場合は、それが必須項目であることを、視覚のみに依存した情報提供をしないようにしてください。
@@ -961,7 +1039,14 @@ checks:
           - 2-1-3a
           - 2-1-3c
       level: *lv1
-      name: divやspanなど、通常focus対象にならないような要素が操作対象の場合、キーボード操作でもフォーカスし、操作できるようになっている
+      name: divやspanなど、通常フォーカス対象にならないような要素が操作対象の場合、キーボード操作でもフォーカスし、操作できるようになっている
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
+        -
+          name: 7.2.1.2 フォーカス移動に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.2.html
       tech: |
         本当は2-1-1aを満たしている場合は、この達成基準はパスするのですが、うっかり書いてしまうことが多い上に、キーボード操作において致命的な実装になることがあるので、個別のチェックとしています。注意してください。
 
@@ -974,6 +1059,10 @@ checks:
         2-1-3:
           - 2-1-3d
       level: *lv1
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
       name: キーボードの操作について特定のタイミングを必要とするようなコンポーネントがない
 
     2-1-1e:
@@ -987,6 +1076,10 @@ checks:
           - 1-1-1d
       level: *lv1
       name: 特定のタイミングでのキーボード操作を要するコンポーネントが存在するが、その「特定のタイミング」がコンテンツの本質である
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
       tech: |
         ドライビングシミュレータなど、「特定のタイミング」に必然性がある場合は、コンテンツの本質であるといえるでしょう。
         1.1.1では、コントロールを受け取る要素がアクセシブルでない場合、説明を設けることで適合となる。本項の「ドライビングシミュレータ」も、その対象なので、1.1.1に準じて、どういったコンポーネントなのか説明を付与すること。
@@ -1000,6 +1093,13 @@ checks:
       level: *lv1
       non-interference: TRUE
       name: キーボードトラップはない
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
+        -
+          name: 7.2.1.2 フォーカス移動に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.2.html
       tech: |
         「キーボードトラップ」とは、ある要素にフォーカスが移ってしまうと、そこからキーボード操作で抜け出せなくなるような実装を指します。モーダルウィンドウなどを作る場合は、それを閉じる操作がマウスだけでなく、キーボードでも行えなければならない。
 
@@ -1046,6 +1146,11 @@ checks:
           - 2-1-1c
       level: *lv3
       name: divやspanなど、通常focus対象にならないような要素が操作対象の場合、キーボード操作でもフォーカスし、操作できるようになっている
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
+
 
     2-1-3d:
       criterion: *c2-1-3
@@ -1060,6 +1165,10 @@ checks:
           - 2-1-1d
       level: *lv3
       name: キーボードの操作について特定のタイミングを必要とするようなコンポーネントがない
+      url_as:
+        -
+          name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
 
   2-2-1:
     2-2-1a:
@@ -1098,6 +1207,10 @@ checks:
         2-2-2:
           - 2-2-2b
       name: 制限時間のあるコンテンツが存在するが、達成基準2.2.1で求められている配慮をしている
+      url_as:
+        -
+          name: 7.2.2.2 一時停止，停止及び非表示に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.2.2.html
       tech: |
         コンテンツに制限時間を設ける必要がある場合、達成基準2.2.1で求められている次の配慮が必要。制限時間が充分に長い（20時間）か、制限時間を解除できるか、10倍以上の制限時間に調整できるか、延長できるか、その制限時間がコンテンツにとって必然的（オークションなど）なものでなければならない。
         「制限時間」というのは、操作だけを対象としない。カルーセルがある場合、カルーセルが自動的に切り替わっていく間に内容を読まなければならないとき、これは制限時間である。
@@ -1148,6 +1261,10 @@ checks:
         2-3-1:
           - 2-3-1a
       name: 動き、点滅、自動更新のあるコンテンツが存在するが、達成基準2.2.2で求められている配慮をしている
+      url_as:
+        -
+          name: 7.2.2.2 一時停止，停止及び非表示に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.2.2.html
       tech: |
         動きのある、点滅している、スクロールする、又は自動更新する情報は、その情報に注意を逸らされてしまわないように、一時停止、停止、非表示することができる必要がある。読字障害、知的障害、注意力欠如障害のある利用者は、こういったコンテンツのために、他のコンテンツを利用できなくなる恐れがあるため、本項目は「非干渉」である。「他のコンテンツ」については、<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html</a>の「全面広告」に示唆のある事例が上がっているのでみると良い。
         動画、音声、カルーセル等は、動きのあるコンテンツである。
@@ -1186,6 +1303,10 @@ checks:
           - 2-2-3b
       level: *lv3
       name: 制限時間のあるコンテンツが存在するが、コンテンツ利用について、必要不可欠なものではない
+      url_as:
+        -
+          name: 7.2.2.2 一時停止，停止及び非表示に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.2.2.html
       tech: |
         たとえばとあるページのお知らせ一覧は、3分ごとに最新の状態に自動更新される（制限時間のあるコンテンツ）が、そのページ以外に、自動更新されずにすべてのお知らせ記事にアクセスできる仕組みを設けていれば、制限時間のあるコンテンツは「コンテンツ利用について、必要不可欠」でなくなる。
 
@@ -1345,6 +1466,10 @@ checks:
           - 2-4-1a
       level: *lv1
       name: ブロックスキップが提供されている
+      url_as:
+        -
+          name: 7.2.4.1 ブロックスキップに関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.4.1.html
       tech: |
         すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難である。
         なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）の何れかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
@@ -1369,6 +1494,10 @@ checks:
           - 2-4-3a
       level: *lv1
       name: ウェブページのフォーカスを受け取る要素の順番が適切である
+      url_as:
+        -
+          name: 7.2.4.3 フォーカス順序に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.4.3.html
       tech: |
         スクリーンリーダや画面拡大をしている利用者はタブキーによるフォーカスの移動を行うことが多い。タブキーによるフォーカスの移動は、素直なHTMLであれば、HTMLの記述順になるが、tabindexを与えることで、変更もできる。tabindexを与える場合は、意味の把握を妨げるような順序設定にならないように注意すること。
         また、モーダルダイアログを作る場合などは、注意を要する。モーダルダイアログはスクリーンリーダを使っていない利用者にとっては、モーダルダイアログを閉じるまで他の動作はできない。スクリーンリーダを使っている利用者にとっても、同じように振舞うべきであり、タブキーでフォーカス移動をしていると、モーダルを抜けられてしまう、というようなことがあってはならない。
@@ -1379,12 +1508,20 @@ checks:
       pass:
         2-4-4:
           - 2-4-4a
+      relations:
+        2-4-9:
+          - 2-4-9a
       level: *lv1
       name: リンク文字列は、リンク先がなんであるかを単独で判別できるか、同じ要素内など文脈からリンク先を判別できる
+      url_as:
+        -
+          name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
         リンク文字列は、そのリンク先がなんであるかを明示するべきである。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなる。
         ただ2.4.4では、文脈に頼ったリンク文字列の提供はよしとされている。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされている。
         また、<strong>同じ段落内であれば</strong>、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
+        致命的なバリアではありませんし、JISなどの規格の中でも規定はないのですが、リンク先がPDF等のダウンロード用のファイルの場合は、ファイルであること、ファイルサイズも併記しておくと、誰にとっても便利が良いでしょう。
 
   2-4-5:
     2-4-5a:
@@ -1444,6 +1581,10 @@ checks:
         2-4-4:
           - 2-4-4a
       name: リンク文字列は、一部の例外を除いて単独で理解可能である
+      url_as:
+        -
+          name: 7.2.4.4 文脈におけるリンクの目的に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.2.4.4.html
       tech: |
         リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（<a href="http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef" target="a11y_target_out">http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef</a>）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
 
@@ -1476,6 +1617,10 @@ checks:
         3-1-2:
           - 3-1-2a
       name: そのウェブページの基本的な言語をhtml要素やContent-Languageで明示している。
+      url_as:
+        -
+          name: 7.3.1.1 ページの言語に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
       tech: |
         HTMLのlangの指定で<html lang="ja">のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになる（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するよう）。
         多言語サイトで、ついこれをわすれて英語ページでもjaとしてしまうことがあるので要注意。
@@ -1493,6 +1638,10 @@ checks:
         3-1-1:
           - 3-1-1a
       name: 部分的に使われている、そのページの基本的な言語以外の言語にlang属性で言語を明示している。
+      url_as:
+        -
+          name: 7.3.1.1 ページの言語に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
       tech: |
         コンテンツの部分がそれぞれどの自然言語なのかをプログラムに対して明示している。固有名詞、技術用語、言語が不明な語句、及びすぐ前後にあるテキストの言語の一部になっている単語又は語句は除かれる。
         基本は日本語で書かれていて、一部、英語の文章を引用している場合などは、引用部分の言語をマークアップすると良い。
@@ -1511,7 +1660,7 @@ checks:
           - 3-1-3b
       non-exist:
         - 3-1-3
-      name: 難しい用語、技術語、言語特有の慣用句が存在しない
+      name: 難しい用語、技術語、言語特有の慣用句、リート語が存在しない
       tech: |
         関連する達成基準が「適用なし適合」になります。
 
@@ -1720,6 +1869,10 @@ checks:
           - 3-3-1c
       level: *lv1
       name: 必須項目や形式の指定のあるフォームが存在するが、テキストでエラーを説明している
+      url_as:
+        -
+          name: 7.3.3.1 入力エラー箇所の特定に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.3.1.html
       tech: |
         フォームに必須項目や所定の形式の値の入力を求める項目があり、ただしく入力されない限り送信を受け付けない場合は、利用者にわかりやすくエラーを表示すること。エラーを表示する際、たとえば入力されていない必須項目の背景色を変える<strong>だけ</strong>では、視覚障害者にとってエラーがわからないので、不十分である（これは色を変えてはいけない、ということは意味しない。色を明示することで晴眼者のユーザビリティは向上する）。文章でエラーを説明する必要がある。
         JavaScriptで、送信前にエラーチェックをしてしまうのもよい。
@@ -1734,6 +1887,10 @@ checks:
           - 3-3-2a
       level: *lv1
       name: フォームが存在するが、ラベルまたは説明文等が存在する
+      url_as:
+        -
+          name: 7.3.3.2 ラベル又は説明文に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.3.2.html
       tech: |
         利用者にフォームによる入力を求める際、どこに何を入力すべきなのか、わかりやすく情報提供すること。プログラムに解釈できる方法で提供することであればなおよい。具体的にはlabel要素で各フォーム要素と関連付けることで、視覚障害者にとっても利用しやすいフォームを作ることができる。
         また、説明や入力の事例などの掲載も好ましいが、やりすぎるとかえって邪魔になるので、簡潔にすること。
@@ -1767,6 +1924,10 @@ checks:
         3-3-1:
           - 3-3-1c
       name: フォームが存在し、エラーを出すが、修正の提案を含んだエラーを出している
+      url_as:
+        -
+          name: 7.3.3.1 入力エラー箇所の特定に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.3.1.html
       tech: |
         入力内容にエラーがある時、どのように訂正したらいいかを説明することが望ましい。ただ、Understanding WCAG2.0の事例では、「月を入力してください」に対して「12」を入力したユーザに「Januaryと入力してください」という事例を挙げているが、あまり良い例ではないと思う。むしろ、半角英数字での入力を求めている箇所を、全角文字で入力している場合にエラーを出すとして、「アルファベット（a-Z）および数字（0-9）で入力してください」とする、というあたりを参考にすると良い（エラーを出さず、入力を受け付けてしまって、半角英数字に変換してしまう方が、利用者の手間は少なくなるが、こういった対応は場合による）。
         少々分かりづらいのが3.3.1との違いだが、3.3.1の主題はエラー箇所を明示することであって、エラーの修正方法を明示することではない点である。
@@ -1810,6 +1971,10 @@ checks:
           - 3-3-5b
       level: *lv3
       name: フォームが存在するが、ラベルで全ての機能を説明できている
+      url_as:
+        -
+          name: 7.3.3.2 ラベル又は説明文に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.3.2.html
       tech: |
         ラベルですべての機能を説明できている場合は、3.3.5「ヘルプ」は、おそらく「適用なし適合」となる。
 
@@ -1823,6 +1988,10 @@ checks:
           - 3-3-5b
       level: *lv3
       name: フォームが存在するが、わかりにくい箇所については、説明文やヘルプへのリンクがある
+      url_as:
+        -
+          name: 7.3.3.2 ラベル又は説明文に関する達成基準 (等級A)
+          url: http://waic.jp/docs/as/info/201406/7.3.3.2.html
       tech: |
         ラベルが全ての機能を説明するのに不十分な場合、別途ヘルプを設けることが望ましい。フォームの近くに説明文を書くことでも、3.3.5ではヘルプと見なしている。
 
