--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -47,3 +47,11 @@ errors:
     message: リンク先がファイルの場合、ファイルの形式やファイルサイズを明記した方が親切です
     criterion: 2-4-4
     code: 2-4-4a
+  titleless:
+    message: title要素は必須です
+    criterion: 2-4-2
+    code: 2-4-2a
+  langless:
+    message: html要素で文書の初期設定言語を特定してください
+    criterion: 3-1-1
+    code: 3-1-1a
