--- a/libs/a11yc/resources/ja/test.yml
+++ b/libs/a11yc/resources/ja/test.yml
@@ -18,7 +18,7 @@ tests:
     tech: |
       JIS X 8341-3:2016は、JISマーク表示制度の対象規格ではないので、いわゆる「JISマーク」を付与することはできません。また「適合」の表記に関しても、JIS Q 17050-1およびJIS Q 17050-2に沿った適合性評価を経ないと、表記できないことになっています。
       これを救済する形で、「準拠」という対応度の表記が生まれました。
-      「準拠」は、試験の実施し、達成基準を満たしていることが確認できれば表記できます。
+      「準拠」は、試験を実施し、達成基準を満たしていることが確認できれば表記できます。
       「一部準拠」は、試験を実施し、達成基準の一部を満たしていることが確認できれば表記できます。
       「配慮」は、試験の実施は不要ですが、アクセシビリティ方針を掲げている必要があります。
       「準拠」「一部準拠」のいずれもアクセシビリティ方針を掲げることを義務付けています。
@@ -56,8 +56,8 @@ tests:
       アクセシビリティに配慮をしているサイトは、アクセシビリティ方針を公開すると良いでしょう。アクセシビリティ方針には、「どのサイトを対象とするか（URLとサイト名の記載）」「サイト内のどのページのアクセシビリティを重視するか」「除外する項目（PDFや動画など）の有無」「目標とする達成レベルと達成予定期日」などを記載することが推奨されています。
     urls:
       -
-        name: ウェブアクセシビリティ方針策定ガイドライン 2013年8月版
-        url: http://waic.jp/docs/jis2010/accessibility-plan-guidelines/201308/index.html
+        name: ウェブアクセシビリティ方針策定ガイドライン 2016年4月版
+        url: http://waic.jp/docs/jis2016/accessibility-plan-guidelines/201604/
 
   doc6:
     name: アクセシビリティ・サポーテッド
