--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -59,3 +59,7 @@ errors:
     message: チェック対象のサイトに同じtitle要素のページが存在します
     criterion: 2-4-2
     code: 2-4-2a
+  link_check:
+    message: リンク切れの疑いがあります
+    criterion: 2-4-2
+    code: 2-4-2a
