--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1522,6 +1522,7 @@ checks:
         ただ2.4.4では、文脈に頼ったリンク文字列の提供はよしとされている。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされている。
         また、<strong>同じ段落内であれば</strong>、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
         致命的なバリアではありませんし、JISなどの規格の中でも規定はないのですが、リンク先がPDF等のダウンロード用のファイルの場合は、ファイルであること、ファイルサイズも併記しておくと、誰にとっても便利が良いでしょう。
+        リンク先の消失などで、そもそもリンクが切れている場合、アクセシビリティの文脈で問うべき問題ではないかもしれませんが、使いづらいので改善しましょう。
 
   2-4-5:
     2-4-5a:
