--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -63,3 +63,7 @@ errors:
     message: リンク切れの疑いがあります
     criterion: 2-4-4
     code: 2-4-4a
+  same_urls_should_have_same_text:
+    message: 同じURLなのにリンク文字列が異なります
+    criterion: 2-4-9
+    code: 2-4-9a
