--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -127,7 +127,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         Google Mapは、視覚障害者が扱うことは難しいが、「Google Map。ズームや移動ができる地図」と説明をしておく。
-        地図の画像があり、視覚障害者が扱うことは難しいが、「地図」というaltがある。ただし付近にテキストによる経路説明等があれば、このaltは空にしても致命的なバリアではないでしょう。付近に経路説明等がなく、しかも地図の画像であることを明示していなければ、ひとに尋ねることもできないので、確実にバリアであるので修正しましょう。
+        地図の画像があり、視覚障害者が扱うことは難しいが、「地図」というaltがある。ただし付近にテキストによる経路説明等があれば、このaltは空にしても致命的なバリアではないでしょう。付近に経路説明等がなく、しかも地図の画像であることを明示していなければ、ひとに尋ねることもできないので、確実にバリアなので修正しましょう。
 
     1-1-1e:
       criterion: *c1-1-1
@@ -176,7 +176,7 @@ checks:
           name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
-        なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。しかし、1-2-1dを満たすことを考えると、できるだけ説明をするように心がけた方が良いと考えられます。
+        なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。しかし、結局同じレベルAの、1-2-1dを満たすことを考えると、できるだけ説明をするように心がけた方が良いと考えられます。
         演説を音声で提供している場合、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の場合は、書き起こしテキストを用意すること。
       memo: |
         書籍の朗読の場合で、書き起こしテキストを用意すると、著作権を侵害しうるため、公開できないというような場合は？ 著作権法の中には、障害者についての例外（37条など）を定めているが、ウェブコンテンツの場合は、かならずしも受益者が障害者のみでないので、要注意と考えられます。とりあえず「朗読の音声。著作権保護の観点から書き起こしテキストは用意できない。」と説明することで適合、とすることで良いと考えられます。書籍名がわかれば、原典にあたることもできますので。
@@ -418,7 +418,8 @@ checks:
       level: *lv1
       name: 同期したメディアが存在するが、キャプションを提供している
       tech: |
-        「キャプション」は、映画字幕のように話者の発話内容だけを表したものをささない。誰が話しているのか、どんな効果音がなったのか、など映像を理解するために必要な情報を、画面の状況にあわせて提示したものを指す。つまり映画字幕のようなものがあるだけでは、1.2.2は達成できない。ちなみに「クローズドキャプション」は、表示非表示を切り替えられるキャプションで、「オープンキャプション」は、動画内に画像化された文字として表示されるキャプションを意味する（ニュース番組等のテロップを想像すると良いでしょう）。
+        「キャプション」は、映画字幕のように話者の発話内容だけを表したものをささない。誰が話しているのか、どんな効果音が鳴ったのか、など映像を理解するために必要な情報を、画面の状況にあわせて（同期して）提示したものを指す。つまり映画字幕のようなものがあるだけでは、1.2.2は達成できない。
+        ちなみに「クローズドキャプション」は、表示非表示を切り替えられるキャプションで、「オープンキャプション」は、動画内に画像化された文字として表示されるキャプションを意味する（ニュース番組等のテロップを想像すると良いでしょう）。
 
   1-2-3:
     1-2-3a:
@@ -444,7 +445,7 @@ checks:
       tech: |
         講演の収録映像などは、書き起こしテキストを用意すること。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、視覚障害者が、映像を理解するのに必要な情報は詳述する必要がある。単純な話者の発話の書き起こしテキストを用意しただけでは、適合とならない。
         書き起こしテキストを用意しない場合は、画面で何が起こっているかの音声解説（副音声）による説明をいれること。この音声解説も、視覚障害者が動画を理解するために、誰が話しているのかなど、詳述すること。
-        1.2.3を適合とするためには、このどちらかを満たす必要が有る。
+        1.2.3を適合とするためには、上記のどちらかを満たす必要が有る。
 
   1-2-4:
     1-2-4a:
@@ -627,8 +628,8 @@ checks:
           name: 7.1.3.1 情報及び関係性に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.1.3.1.html
       tech: |
-        form類は、checkboxやradioなどは、labelでマークアップして、関連付けをおこなうこと。こうすることで、スクリーンリーダでは、それぞれの項目がわかりやすくなり、ポインティング・デバイスを使いづらい利用者にとっては、クリックしやすくなります。
-        formに必須項目がある場合は、それが必須項目であることを、視覚のみに依存した情報提供をしないようにしてください。
+        form類は、checkboxやradioなどは、labelでマークアップして、関連付けをおこなうこと。こうすることで、スクリーンリーダでは、それぞれの項目がわかりやすくなり、マウスなどのポインティング・デバイスを使いづらい利用者にとっては、クリックしやすくなります。
+        formに必須項目がある場合は、それが必須項目であることを、視覚のみに依存した情報提供をしないようにしてください。たとえば「赤文字の項目は必須です」というような、必須項目の提供の仕方はNGです。
 
   1-3-2:
     1-3-2a:
@@ -639,7 +640,7 @@ checks:
           - 1-3-2a
       name: 線形情報化して意味が破壊されない
       tech: |
-        線形情報化した時に（スクリーンリーダで読んだ時に）意味が壊れないように構築すること。CSSのposition absolute などで、任意の位置に要素類を配置している場合は要注意です。CSSをオフにして確認すると良いです。
+        線形情報化した時に（スクリーンリーダで読んだ時に）意味が壊れないように構築すること。CSSのposition absoluteなどで、任意の位置に要素類を配置している場合は要注意です。CSSをオフにして確認すると良いです。
 
     1-3-2b:
       criterion: *c1-3-2
@@ -709,7 +710,7 @@ checks:
       name: 自動再生の音声があるが、3秒以下である。あるいは適切な制御ができる。
       tech: |
         ウェブページ上にある音声が自動的に再生され、3秒より長く続く場合、その音声を一時停止又は停止するメカニズム、もしくはシステム全体の音量レベルに影響を与えずに音量レベルを調整できるメカニズムが利用できる。
-        余談だが、YouTubeは自動再生である。であるが、視覚障害者にとっては、自動再生がありがたい（＝リンクを踏むだけで、情報を得る流れを得られる。しかもYouTubeとはそういうものだ、という了解もある）という側面もある。この自動再生の利便性は、もしかするとYouTube以外でもありえることかもしれない。
+        ちなみに、YouTubeは自動再生です。であるが、視覚障害者にとっては、自動再生がありがたい（＝リンクを踏むだけで、情報を得る流れを得られる。しかもYouTubeとはそういうものだ、という了解もある）という側面もある。この自動再生の利便性は、もしかするとYouTube以外でもありえることかもしれないですが、普通のウェブページでは、注意するようにしてください。
 
   1-4-3:
     1-4-3a:
@@ -751,7 +752,11 @@ checks:
           - 1-4-9a
       name: コントラストが甘い箇所は、たいへん大きな文字か、ロゴか、誰にとっても意味のない飾りである
       tech: |
-        「たいへん大きな文字」とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これはおよそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値は扱いづらいので、注意してください。なお、日本語の場合はそれぞれ太字でなければ22ポイント、太字であれば18ポイントが基準とされています(G18) 大きな文字であれば、コントラスト比は3:1でもよいということになっています。
+        「たいへん大きな文字」とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これは印刷した場合は、およそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値は扱いづらいので、注意してください。なお、日本語の場合はそれぞれ太字でなければ22ポイント、太字であれば18ポイントが基準とされています(G18) 大きな文字であれば、コントラスト比は3:1でもよいということになっています。
+      urls:
+        -
+          name: G18
+          url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/G18.html
 
   1-4-4:
     1-4-4a:
@@ -774,8 +779,8 @@ checks:
       level: *lv2
       name: ユーザエージェントか、ウェブページ側の文字サイズコントローラの機能で文字を拡大しても、すくなくとも200%までは、文字が隠れたりすることがない
       tech: |
-        キャプション及び文字画像を除き、テキストは、コンテンツ又は機能を損なうことなく、支援技術なしで 200％ までサイズ変更できること。「支援技術なし」とは、要はブラウザでの拡大を念頭におけばよく、ウェブページ側が、かならずしも文字サイズコントローラを提供する必要はない。
-        文字を拡大した際に、文字が何かの要素に隠れてしまって、読めなくなる、ということがないようにすること。幅の狭いinputなどは要注意である。横スクロールの発生にも注意を払うとなお良いでしょう。
+        キャプション及び文字画像を除き、テキストは、コンテンツ又は機能を損なうことなく、支援技術なしで200％までサイズ変更できること。「支援技術なし」とは、要はブラウザでの拡大を念頭におけばよく、ウェブページ側が、かならずしも文字サイズコントローラを提供する必要はありません。
+        文字を拡大した際に、文字が何かの要素に隠れてしまって、読めなくなる、ということがないようにすること。幅の狭いinputなどは要注意です。横スクロールの発生にも注意を払うとなお良いでしょう。
 
   1-4-5:
     1-4-5a:
