--- a/libs/a11yc/resources/ja/test.yml
+++ b/libs/a11yc/resources/ja/test.yml
@@ -77,3 +77,57 @@ tests:
       -
         name: 時間の経過に伴って変化するメディア
         url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
+
+  doc8:
+    name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルA）
+    tech: |
+      共通：動画内でも色や形に依存した情報提供をしない（1-3-1a、1-4-1a）。また自動再生される場合は、利用者によって停止できるようにしておくこと（1-4-2b）。また閃光に関しても注意を忘れないでください（2-3-1b）。
+      音声のみ（収録済）：音声と同等の内容のテキストを用意する。話者や（笑い）などを忘れないようにする（1-2-1c）。
+      音声のみ（ライブ）：「ライブ音声であること」と「なんのライブ音声であるのか」を説明する（1-1-1f）。
+      映像のみ（収録済）：映像と同等の内容のテキストを用意する。話者や画面説明を忘れないようにする（1-2-1d）。
+      映像のみ（ライブ）：「ライブ映像であること」と「なんのライブ映像であるのか」を説明する（1-1-1f）。
+      同期したメディア（収録済）：メディアには「キャプション」を提供する（1-2-2b）。音声解説または書き起こしテキストを用意する（1-2-3a）。
+      同期したメディア（ライブ）：「ライブ動画であること」と「なんのライブ動画であるのか」を説明する（1-1-1f）。
+    urls:
+      -
+        name: 時間の経過に伴って変化するメディア
+        url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
+
+  doc9:
+    name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルAA）
+    tech: |
+      音声のみ（収録済）：レベルAと同じ。
+      音声のみ（ライブ）：レベルAと同じ。
+      映像のみ（収録済）：レベルAと同じ。
+      映像のみ（ライブ）：レベルAと同じ。
+      同期したメディア（収録済）：レベルAでは、音声解説は義務ではないが、レベルAAでは、音声解説を義務化する（1-2-5a）。
+      同期したメディア（ライブ）：キャプションを提供する（1-2-4b）。
+    urls:
+      -
+        name: 時間の経過に伴って変化するメディア
+        url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
+
+  doc10:
+    name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルAAA）
+    tech: |
+      共通：音声コンテンツがある場合、背景音と前景音の差を十分確保してください（1-4-7b）。また、背景音ミュートも求められます（1-4-7c）。
+      音声のみ（収録済）：レベルAと同じ。
+      音声のみ（ライブ）：正確な代替コンテンツを用意する（1-2-9a）。
+      映像のみ（収録済）：拡張音声解説を提供する（1-2-7a）。正確な代替コンテンツを用意する（1-2-8a）。
+      同期したメディア（収録済）：手話通訳の提供（1-2-6a）と拡張音声解説（1-2-7a）と正確な代替コンテンツを用意する（1-2-8a）。
+      同期したメディア（ライブ）：レベルAAと同じ。
+    urls:
+      -
+        name: 時間の経過に伴って変化するメディア
+        url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
+
+  doc11:
+    name: 「非テキストコンテンツ（カルーセル）」でアクセシビリティを確保するためのメモ
+    tech: |
+      ウェブサイトにはしばしば「カルーセル（スライドショー）」が設置されます。カルーセルは複数の情報を一箇所で、多くの利用者にとっては目立つ場所に、設置できるため、場合によっては便利なものですが、利用者によっては、バリアになります（2-2-1b）。
+      利用者によっては、自動的な動きのあるコンポーネントは、集中力を妨げられ、本来得たい情報の取得を阻害することがあります（2-2-2b）。
+      カルーセルに関しては、
+    urls:
+      -
+        name: 時間の経過に伴って変化するメディア
+        url: http://waic.jp/docs/UNDERSTANDING-WCAG20/media-equiv.html
