--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -358,7 +358,7 @@ checks:
       tech: |
         講演の収録音声などは、書き起こしテキストを用意することで、「同等の情報」を提供していると言える。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、なるべく詳述する必要がある。
       memo: |
-        歌を含んだ楽曲の場合は、著作権の問題がなければ、やはり書き起こしテキストを提供すべきだろう。著作権の問題が発生する場合は、その事情を、「楽曲『XX』の音声。著作権保護の観点から書き起こしテキストは用意できない。」というように説明すれば、おそらく適合。
+        歌を含んだ楽曲の場合は、著作権の問題がなければ、やはり書き起こしテキストを提供すべきでしょう。著作権の問題が発生する場合は、その事情を、「楽曲『XX』の音声。著作権保護の観点から書き起こしテキストは用意できない。」というように説明すれば、おそらく適合。
 
     1-2-1d:
       criterion: *c1-2-1
@@ -580,7 +580,7 @@ checks:
       tech: |
         情報の意味を要素の色、大きさ、位置のみで提供していないこと。文章はh*やstrongなどを用いて構造化し、CSSなしでもきちんと情報が伝わるようにすること。
         見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
-        NGの例は「右の写真は……」「カレンダの赤いマスは……」「赤い文字の項目は必須項目です」というようなものが挙げられるだろう。ただし「写真の中の右上の人物は……」というような情報提供は、これにあたらない。また、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
+        NGの例は「右の写真は……」「カレンダの赤いマスは……」「赤い文字の項目は必須項目です」というようなものが挙げられるでしょう。ただし「写真の中の右上の人物は……」というような情報提供は、これにあたらない。また、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
 
     1-3-1b:
       criterion: *c1-3-1
@@ -755,7 +755,7 @@ checks:
         「たいへん大きな文字」とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これは印刷した場合は、およそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値は扱いづらいので、注意してください。なお、日本語の場合はそれぞれ太字でなければ22ポイント、太字であれば18ポイントが基準とされています(G18) 大きな文字であれば、コントラスト比は3:1でもよいということになっています。
       urls:
         -
-          name: G18
+          name: G18 テキスト（及び画像化された文字）とその背景の間に、少なくとも4.5:1以上のコントラスト比をもたせる
           url: http://www.ciaj.or.jp/access/web/docs/WCAG-TECHS/G18.html
 
   1-4-4:
@@ -974,7 +974,7 @@ checks:
       level: *lv3
       name: 利用者が色の選択をすることを妨げない
       tech: |
-        ウェブページ上で、背景色と前景色を選択できるような仕組みを用意するか、OSのハイコントラストモードでの利用時に弊害となるような設定をしない。原則、本文欄のような箇所では、前景色、背景色を無指定にしておけば、問題は起きにくい。
+        ウェブページ上で、背景色と前景色を選択できるような仕組みを用意するか、OSのハイコントラストモードでの利用時に弊害となるような設定をしない。原則、本文欄のような箇所では、前景色、背景色を無指定にしておけば、問題は起きにくいです。
 
     1-4-8e:
       criterion: *c1-4-8
@@ -990,7 +990,7 @@ checks:
           - 1-4-4a
           - 1-4-4b
       tech: |
-        文字サイズの相対指定だけを意味するのではなく、拡大して読めなくなる文字が存在しないことを保証する必要もある。
+        文字サイズの相対指定だけを意味するのではなく、拡大して読めなくなる文字が存在しないことを保証する必要もあります。
 
   1-4-9:
     1-4-9a:
@@ -1155,7 +1155,6 @@ checks:
         -
           name: 7.2.1.1 キーボード操作に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.2.1.1.html
-
 
     2-1-3d:
       criterion: *c2-1-3
@@ -1418,7 +1417,7 @@ checks:
       level: *lv3
       name: 強制的にログアウトさせるような実装があるが、再認証を経ることで、入力中の情報を失うことなく、入力を再開できる
       tech: |
-        セキュリティ上の理由から、一定以上の利用していない時間があったら、強制的にログアウトする仕組みを設けている場合がある。また、同じアカウントでのログインを許さないシステムでは、同時に2名が同じアカウントでログインした場合、先にログインしていたものを強制的にログアウトさせることもあるだろう。こういった強制的ログアウトの際も、再認証を経ることで、入力中の情報を失うことなく、入力を再開できるようにするべきです。
+        セキュリティ上の理由から、一定以上の利用していない時間があったら、強制的にログアウトする仕組みを設けている場合がある。また、同じアカウントでのログインを許さないシステムでは、同時に2名が同じアカウントでログインした場合、先にログインしていたものを強制的にログアウトさせることもあるでしょう。こういった強制的ログアウトの際も、再認証を経ることで、入力中の情報を失うことなく、入力を再開できるようにするべきです。
 
   2-3-1:
     2-3-1a:
@@ -1478,7 +1477,7 @@ checks:
       tech: |
         すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難である。
         なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）の何れかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
-        ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いだろう。
+        ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いでしょう。
 
   2-4-2:
     2-4-2a:
@@ -1540,7 +1539,7 @@ checks:
       tech: |
         一連のプロセスであるショッピングカートの途中のページなどを除いて、ウェブページ一式内のそれぞれのページにたどり着く複数の手段を提供することが望ましい。多くのウェブサイトは、グローバルメニューを備えているが、それに加えて、サイト内検索や、関連ページへのリンク、サイトマップ、目次（ページ）の何れかがあれば、この達成基準を満たせる（ただし「目次ページ」のあり方については、その目次ページが個々のページにたどり着く唯一の手段である場合、注意を要するかもしれない）。
         目次ページというのは、いわばカテゴリにぶらさがる個々の項目へのリンク一覧である。サイトマップが完全（すべてのページを網羅している）なものでなくても、サイトマップに目次ページを含んでいれば、「複数の手段」を提供したと言える。
-        ただし、目次ページより下位のページが、何度もクリックしないとたどり着けないページになっていたら、やはりサイト内検索の実装がのぞましいだろう。またそういったコンテンツが存在してしまう前に、そもそもサイトの構造をシンプルにすべきでもあります。
+        ただし、目次ページより下位のページが、何度もクリックしないとたどり着けないページになっていたら、やはりサイト内検索の実装がのぞましいでしょう。またそういったコンテンツが存在してしまう前に、そもそもサイトの構造をシンプルにすべきでもあります。
 
   2-4-6:
     2-4-6a:
@@ -1629,8 +1628,8 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
       tech: |
         HTMLのlangの指定で<html lang="ja">のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになる（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するよう）。
-        多言語サイトで、ついこれをわすれて英語ページでもjaとしてしまうことがあるので要注意。
-        また単一のページ内で多言語が混在する場合は、達成基準3.1.2にも配慮することが強く推奨されている。
+        多言語サイト構築の際など、ついこれを忘れて英語ページでもjaとしてしまうことがあるので要注意です。
+        また単一のページ内で多言語が混在する場合は、達成基準3.1.2にも配慮することが強く推奨されています。
         Googleの自動翻訳は要注意。現状では、翻訳しても変わっているのはテキストのみで、langを書き換えているわけではない様子。
 
   3-1-2:
@@ -1651,7 +1650,7 @@ checks:
       tech: |
         コンテンツの部分がそれぞれどの自然言語なのかをプログラムに対して明示している。固有名詞、技術用語、言語が不明な語句、及びすぐ前後にあるテキストの言語の一部になっている単語又は語句は除かれる。
         基本は日本語で書かれていて、一部、英語の文章を引用している場合などは、引用部分の言語をマークアップすると良い。
-        また、多言語サイトのheaderあたりによくある言語切り替えはa要素にそれぞれのlang属性を付けると良いだろう。
+        また、多言語サイトのheaderあたりによくある言語切り替えはa要素にそれぞれのlang属性を付けると良いでしょう。
 
   3-1-3:
     3-1-3a:
@@ -1730,7 +1729,7 @@ checks:
       name: コンテンツは中学校三年生程度の読解力で理解できるか、あるいは理解できる注釈かバージョンが存在する
       tech: |
         コンテンツが前期中等教育レベル（UNESCO基準、9年間の教育を受けたもの、なので、中学校3年生程度）の読解力で読めることが望ましい。それを超える読解レベルを求めるときには、前期中等教育レベルの読解力で理解できる補足的コンテンツまたはバージョンを用意すること。
-        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システム（<a href="http://jreadability.net" target="a11y_target_out">http://jreadability.net</a>）があった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれるが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないだろう。
+        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システム（<a href="http://jreadability.net" target="a11y_target_out">http://jreadability.net</a>）があった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれるが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないでしょう。
 
   3-1-6:
     3-1-6a:
@@ -1744,7 +1743,7 @@ checks:
           - 3-1-5a
       name: 人名や地名、固有名詞。あるいは読み方がわからないと文章の意味が不明瞭になる場合に、rubyやかっこ書きで読み方がわかるようになっている。あるいは読み方の音声ファイルが提供されている。
       tech: |
-        日本語の例でいえば端的なものは人名や漢字の読み方がこれに当たるだろう。rubyを付与したり、かっこで注釈を加えることが望ましい。漢字の場合はそれで良いが、外国語の読み方などについて、手厚い対応としては、発音の音声ファイルを用意する対応も考えられる。
+        日本語の例でいえば端的なものは人名や漢字の読み方がこれに当たるでしょう。rubyを付与したり、かっこで注釈を加えることが望ましい。漢字の場合はそれで良いが、外国語の読み方などについて、手厚い対応としては、発音の音声ファイルを用意する対応も考えられる。
         日本語に特化した話が続くが、どの程度の漢字に読み仮名を振るかについては、3.1.5を準用して、前期中等教育レベル、というのがひとつの判断になると考えられるが、人名などはこの限りではないし、じっさいのところ、中学校3年生レベルの漢字はそれなりに難しいこともある。
         Understandingでは、文脈に依存した読み方（典型的な例は「方」を「かた」あるいは「ほう」と読む場合）について、言及がある。個別事例になるが、「方」に関しては、スクリーンリーダはそれほど賢く判別はしてくれないが、しかしそれで意味がわからなくなるというほど致命的でもないため、問題は少ないと言える。
         いっぽう、これを「発音」の文脈に入れるべきではないかもしれないが、日付をスラッシュで区切った場合は、分数に読まれることがあり、スクリーンリーダでのユーザビリティを高めるためには避けるべきだと思われる。
@@ -1775,8 +1774,8 @@ checks:
       name: 入力時に予告なしに状況を変化させるような要素は存在しない。
       tech: |
         ページ内の入力欄全てを入力したら自動的に送信するとか、チェックボックスやラジオボタンをチェックしたらページ移動するとか、そういったことをしてはならない。
-        時々あるのは、selectのonchangeを拾ってページ移動するようなインタフェイス。マウスで操作している利用者にとっては、selectの3項目下を選択するというようなことができるが、キーボードの場合は、下キーを押した途端にonchange判定されてしまって、永遠に2個下に行けない、ということが起こる（ある意味「キーボードトラップ」になっているとも言えるだろう）。こういった場合は、「実行ボタン」を付与する必要があるだろう。
-        この達成基準は3.2.1と似ているが、状況の変化が予測可能で、制御可能であれば、許されることもあるという点で違う（フォーカスの場合は、予測や制御が本質的に難しい）。たとえばカレンダに予定を追加するフォームがある時、予定の種別をラジオボタンで選択すると、入力欄が動的に変化するような仕掛けは、予測可能で制御可能であると言えるだろう。
+        時々あるのは、selectのonchangeを拾ってページ移動するようなインタフェイス。マウスで操作している利用者にとっては、selectの3項目下を選択するというようなことができるが、キーボードの場合は、下キーを押した途端にonchange判定されてしまって、永遠に2個下に行けない、ということが起こる（ある意味「キーボードトラップ」になっているとも言えるでしょう）。こういった場合は、「実行ボタン」を付与する必要があるでしょう。
+        この達成基準は3.2.1と似ているが、状況の変化が予測可能で、制御可能であれば、許されることもあるという点で違う（フォーカスの場合は、予測や制御が本質的に難しい）。たとえばカレンダに予定を追加するフォームがある時、予定の種別をラジオボタンで選択すると、入力欄が動的に変化するような仕掛けは、予測可能で制御可能であると言えるでしょう。
         また、クレジットカード番号など4桁ずつ入力する際、4文字入力したら次のフィールドに自動的にフォーカスを映すような挙動も、あらかじめ説明されている場合は許容される。
 
   3-2-3:
