--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -4,7 +4,7 @@ errors:
     criterion: 1-1-1
     code: 1-1-1b
   is_not_empty_alt_attr_of_img_inside_a:
-    message: a要素の中にあるimg要素のalt属性値は空文字でなくリンクの目的を表す文字を入れてください
+    message: a要素の中にimg要素しかない場合、img要素のalt属性値は空文字でなくリンクの目的を表す文字を入れてください
     criterion: 1-1-1
     code: 1-1-1c
   is_are_has_alt:
@@ -67,3 +67,7 @@ errors:
     message: 同じURLなのにリンク文字列が異なります
     criterion: 2-4-9
     code: 2-4-9a
+  duplicated_attributes:
+    message: 属性値が重複しています
+    criterion: 4-1-1
+    code: 4-1-1a
